univention-virtual-machine-manager-daemon (7.0.0-13) unstable; urgency=low

  * Bug #47617: Add post-copy migration.
  * Bug #22695: Report IO errors.

 -- Philipp Hahn <hahn@univention.de>  Tue, 30 Oct 2018 19:20:13 +0100

univention-virtual-machine-manager-daemon (7.0.0-12) unstable; urgency=low

  * Bug #21386: Fix spelling mistakes in UCR variable descriptions.

 -- Philipp Hahn <hahn@univention.de>  Fri, 05 Oct 2018 16:57:02 +0200

univention-virtual-machine-manager-daemon (7.0.0-11) unstable; urgency=low

  * Bug #21386: Assert compatible CPU during live migration

 -- Philipp Hahn <hahn@univention.de>  Fri, 14 Sep 2018 08:40:11 +0200

univention-virtual-machine-manager-daemon (7.0.0-10) unstable; urgency=medium

  * Bug #41772: fix javascript traceback

 -- Jannik Ahlers <ahlers@univention.de>  Tue, 03 Jul 2018 17:33:48 +0200

univention-virtual-machine-manager-daemon (7.0.0-9) unstable; urgency=medium

  * Bug #47268: Make CPU-Usage column visibility configurable

 -- Erik Damrose <damrose@univention.de>  Fri, 29 Jun 2018 11:59:37 +0200

univention-virtual-machine-manager-daemon (7.0.0-8) unstable; urgency=medium

  * Bug #41772: relocated functionality to add snapshots to own javascript
  	file to enable snapshots being made in right click context menu in vm list
  	grid

 -- Jannik Ahlers <ahlers@univention.de>  Tue, 22 May 2018 12:01:42 +0200

univention-virtual-machine-manager-daemon (7.0.0-7) unstable; urgency=medium

  * Bug #47182: Sort valid hosts for migrate option

 -- Johannes Keiser <keiser@univention.de>  Thu, 14 Jun 2018 16:21:25 +0200

univention-virtual-machine-manager-daemon (7.0.0-6) unstable; urgency=medium

  * 56univention-virtual-machine-manager-daemon.uinst: Pass "$@" to the
    credential parsing functions (Bug #46578)

 -- Stefan Gohmann <gohmann@univention.de>  Sun, 11 Mar 2018 12:34:07 +0100

univention-virtual-machine-manager-daemon (7.0.0-5) unstable; urgency=medium

  * Bug #46001: Merge missing changes to UCS 4.3
